--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,23 @@
 .menu {
   color: blue;
 }
+
+.button{
+    border-radius: 30%;
+    background-color:lightgray;
+  }
+
+.menuTitle{
+  font-weight:100%;
+  color:black;
+}
+
+
+.menuDesc{
+  color:darkblue;
+}
+
+img{
+  max-width:50%;
+  margin: 5%;
+}
