java script is literally the most confusing language I have dealt with so far and I really wish that we would get taught this instead of me having to go to w3 w3schools or youtube to figure out what the hell is happening :)

--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,8 @@
 }
 
 .button{
-    padding: 5px 10px;
-    border-radius: 30%;
+    border-radius: 40%;
+    size: 10px;
     background-color:lightgray;
   }
 
