--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,19 @@
     border-radius: 40%;
     size: 10px;
     background-color:lightgray;
+    margin: 0 5px;
   }
+
+.button-group {
+  display:flex;
+  align-items: center;
+}
+
+.price-add {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
 .menuTitle{
   overflow: hidden;
@@ -39,7 +51,11 @@ img{
   min-width:5%;
 }
 
-.menuItem{
+.menu-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px; /* Add some margin if needed */
 }
 
 .logoImg{
@@ -76,12 +92,12 @@ img{
 }
 
 .content-column {
-  flex-grow: 1; /* Take remaining space */
+  flex: 1;
 }
 
 .image-column {
-  flex: 0 0 34%; /* Don't grow, don't shrink, initial width based on content */
-  margin-left: 15px;
+  flex: 1;
+  text-align: center;
 }
 
 .row {
