--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,11 @@ img{
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 20px; /* Add some margin if needed */
+  margin-bottom: 20px;
+}
+
+.subtotal {
+  margin-left: 20px; 
 }
 
 .logoImg{
@@ -73,7 +77,7 @@ img{
 .centered {
   display: grid;
   place-items: center;
-  height: 100vh; /* Optional: for vertical centering */
+  height: 100vh; 
 }
 
 
@@ -88,7 +92,7 @@ img{
 }
 .menu-item {
   display: flex;
-  flex-wrap: wrap; /* Allow items to wrap onto new lines */
+  flex-wrap: wrap;
 }
 
 .content-column {
@@ -106,5 +110,5 @@ img{
 }
 
 .column {
-  flex-grow: 1; /* Each column takes equal width */
+  flex-grow: 1;
 }
